--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 <body>
 
 <header>
-    <h1>Your Novel Title</h1>
+    <h1>Ergaiesses</h1>
     <nav>
         <a href="#">Home</a>
         <a href="#">Chapters</a>
-        <a href="#">About</a>
     </nav>
 </header>
 
 <main id="content">
-    <h2>Chapter 1: The Beginning</h2>
-    <p>Welcome to the first chapter of your novel. The story begins...</p>
+    <h2>Chapter 1: Tradegy</h2>
+    <p>Welcome to the first chapter of your novel. The story begins................................................................................................................................................................................................................................</p>
 </main>
 
 <div class="controls">
