--- a/index.html
+++ b/index.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Novel</title>
+    <title>Ergaiesses</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header>
-    <h1>Ergaiesses</h1>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Chapters</a>
-    </nav>
-</header>
+    <!-- Novel Title -->
+    <header>
+        <h1>Ergaieses</h1>
+    </header>
 
-<main id="content">
-    <h2>Chapter 1: Tradegy</h2>
-    <p>Welcome to the first chapter of your novel. The story begins................................................................................................................................................................................................................................</p>
-</main>
+    <!-- Chapter Slider -->
+    <div class="chapter-slider">
+        <label for="chapter-slider">Chapter: </label>
+        <input type="range" id="chapter-slider" min="1" max="10" value="1" oninput="updateChapter()">
+        <span id="chapter-title">Chapter 1: Tradegy</span>
+    </div>
 
-<div class="controls">
-    <button onclick="changeTextColor()">Change Text Color</button>
-    <button onclick="changeBackgroundColor()">Change Background Color</button>
-    <button onclick="changeBackgroundImage()">Change Background Image</button>
-</div>
+    <!-- Content Section -->
+    <main id="content">
+        <p>You can see this?</p>
+    </main>
 
-<footer>
-    <p>&copy; 2025 Your Name</p>
-</footer>
+    <!-- Navigation Buttons -->
+    <div class="navigation">
+        <button id="prev-btn" onclick="changeChapter(-1)">Previous</button>
+        <button id="next-btn" onclick="changeChapter(1)">Next</button>
+    </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
