--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <option value="2">Ch 2: The Dark Reunion</option>
             <option value="3">Ch 3: The Betrayal</option>
             <option value="4">Ch 4: The Reckoning</option>
-            <!-- Add more chapters as needed -->
         </select>
     </div>
 
@@ -36,6 +35,7 @@
         <button id="next-btn" onclick="changeChapter(currentChapter + 1)">Next</button>
     </div>
 
+    <!-- Linking the Script -->
     <script src="script.js"></script>
 </body>
 </html>
