--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="chapter-dropdown">
         <label for="chapter-select">Select Chapter: </label>
         <select id="chapter-select" onchange="changeChapterFromDropdown()">
-            <option value="1">Ch 1: The Beginning</option>
-            <option value="2">Ch 2: The Dark Reunion</option>
-            <option value="3">Ch 3: The Betrayal</option>
-            <option value="4">Ch 4: The Reckoning</option>
+            <option value="1">Ch 1: Tradegy</option>
+            <option value="2">Ch 2: A wicked revival</option>
+            <option value="3">Ch 3: Chimera</option>
+            <option value="4">Ch 4: He walks amongst us</option>
         </select>
     </div>
 
